--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ section{
 }
 #full-stack{
     border-left: 7px solid;
-    border-image:linear-gradient(180deg,lightSalmon,tomato);
+    border-image:linear-gradient(180deg,yellow,orange);
     border-image-slice: 1;
 }
 #baby-web{
