--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; << old */
+    font-family: 'Acme', sans-serif;
 }
 h1{
     font-size: 50px;
@@ -33,7 +34,8 @@ section{
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(45deg,lightSalmon,tomato);
+    /* background-image: linear-gradient(45deg,lightSalmon,tomato); << old*/
+    background-image: linear-gradient(45deg,orange,tomato);
     padding:10px 20px;
     border-radius: 5px;
     color: white;
